--- a/src/components/Routes/style.scss
+++ b/src/components/Routes/style.scss
@@ -97,7 +97,7 @@
 
 @media (max-width: 468px) {
   .investor_home_container {
-    background-color: white;
+    background-color: #eaeef2;
     .sidebar {
       top: 11.5%;
       left: 0;
@@ -116,9 +116,10 @@
       // flex: 1;
       margin-left: 0px;
       transition: margin-left 0.3s ease;
-      margin-top: 16%;
+      // margin-top: 16%;
       max-width: 100%;
       overflow: hidden;
+      background-color: #eaeef2;
     }
 
     // Add a class to handle the sidebar collapsed state
